# lazyimp

./: .gitignore  .venv  LICENSE  Makefile  README.md  pyproject.toml  setup.py
lazyimp/: __init__.py  _capture.c  _capture.cc  proxy.py
lazyimp/tests/: test_lazyimp.py  test_proxy.py
lazyimp/tests/capturerace/: run.py
lazyimp/tests/foo2/: __init__.py
