[build-system]
requires = [
    'setuptools',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'lazyimp'
authors = [
    {name = 'wrmsr'},
]
urls = {source = 'https://github.com/wrmsr/lazyimp'}
license = 'BSD-3-Clause'
readme = 'README.md'
requires-python = '>=3.11'
version = '0.0.6-dev'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
description = 'lazyimp'

[tool.setuptools]

[tool.setuptools.packages.find]
include = [
    'lazyimp',
    'lazyimp.*',
]
exclude = [
    '*.tests',
    '*.tests.*',
]

[tool.setuptools.package-data]
'*' = [
    '*.c',
    'LICENSE',
]
